--- a/programa.html
+++ b/programa.html
@@ -1,21 +1,28 @@
-<meta charset="UTF-8">
+<canvas width="600" height="400"></canvas>
 
 <script>
-    function pulaLinha() {
-        document.write("<br>");
-        document.write("<br>");
-    }
 
-    function mostra(frase) {
-        document.write(frase);
-        pulaLinha();
-    }
+	var tela = document.querySelector("canvas");
+	var pincel = tela.getContext("2d");
 
-    var ano = 2023;
-    mostra("A idade do Maurício é " + (ano-2004) + " anos");
-    pulaLinha();
-    mostra("A idade de fulano é " + (ano-2005) + " anos");
-    pulaLinha();
-    mostra("A idade de ciclano é " + (ano-1999) + " anos");
+	pincel.fillStyle = "lightgrey";
+	pincel.fillRect(0, 0, 600, 400);
 
+	pincel.fillStyle = "green";
+	pincel.fillRect(0, 0, 200, 400);
+
+	pincel.fillStyle = "red";
+	pincel.fillRect(400, 0, 200, 400);
+
+	pincel.fillStyle = "yellow";
+	pincel.beginPath();
+	pincel.moveTo(300, 200);
+	pincel.lineTo(200, 400);
+	pincel.lineTo(400, 400);
+	pincel.fill();
+
+	pincel.fillStyle = "blue"
+	pincel.beginPath();
+	pincel.arc(300, 200, 50, 0, 2 * 3.14);
+	pincel.fill();
 </script>
